# NordeaSavingsAgent

./: .gitignore  QUICKSTART.md  README.md  package.json  start-demo.ps1  stop-demo.ps1
agent/: README.md  config.json  memory_schema.json  system_prompt.md
agent/examples/: first_session_expected.md  (+1 more)
agent_state/: README.md
brief/: FutureInterfacesProjectChat.md  README.md
demo/: README.md
front-nora-mobile/: .env.example  server.js
luca/: README.md  api.py  daily_recap.py  db_tools.py  investment_summary.py  luca_checkpoints.db-shm  main.py  model.py  pyproject.toml  server.py  spending_summary.py
luca/agents/: aggregator_agent.py  bank_automation.py  daily_recap_agent.py  investment_agent.py  learner_agent.py  main_agent.py  personalanalyzer_agent.py  web_searcher_agent.py
luca/data/: cards.csv  contacts.csv  daily_brief.json  goals.csv  investments.csv  loans.csv  profile.csv  transactions.csv
luca/memory/: short_term.py
luca/tools/: database_tools.py  finance_tools.py  image_processing.py  learning_tools.py  web_search.py
nora-mobile/: .env.example  package-lock.json  package.json  server.js
notes/: README.md  build_memory.md  concept.md
synthetic_data/: README.md
tests/: README.md  import_nordea_workbook.ps1  run_nora_simulation.mjs  simulated_user_prompt.md  test_action_approval_agent.mjs  test_education_resource_suggestion.mjs  test_education_risk_lesson_agent.mjs  test_expense_review_agent.mjs  test_future_perspective_card.mjs  test_goal_savings_plan_agent.mjs  test_learning_progress_agent.mjs  test_snapshot_insight_agent.mjs
(+456 files in other folders)
