[project]
name = "agentic-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "firecrawl>=4.27.2",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "mcp>=1.27.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=1.3.0",
]
